Ensure text remains visible during webfont load

--- a/assets/sass/klise/_fonts.scss
+++ b/assets/sass/klise/_fonts.scss
@@ -9,6 +9,7 @@
       format("woff2");
   unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F,
     U+FE2E-FE2F;
+  font-display: swap;
 }
 
 @font-face {
@@ -19,6 +20,7 @@
     url(https://fonts.gstatic.com/s/roboto/v18/KFOmCnqEu92Fr1Mu5mxKOzY.woff2)
       format("woff2");
   unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+  font-display: swap;
 }
 
 @font-face {
@@ -29,6 +31,7 @@
     url(https://fonts.gstatic.com/s/roboto/v18/KFOmCnqEu92Fr1Mu7mxKOzY.woff2)
       format("woff2");
   unicode-range: U+1F00-1FFF;
+  font-display: swap;
 }
 
 @font-face {
@@ -39,6 +42,7 @@
     url(https://fonts.gstatic.com/s/roboto/v18/KFOmCnqEu92Fr1Mu4WxKOzY.woff2)
       format("woff2");
   unicode-range: U+0370-03FF;
+  font-display: swap;
 }
 
 @font-face {
@@ -49,6 +53,7 @@
     url(https://fonts.gstatic.com/s/roboto/v18/KFOmCnqEu92Fr1Mu7WxKOzY.woff2)
       format("woff2");
   unicode-range: U+0102-0103, U+0110-0111, U+1EA0-1EF9, U+20AB;
+  font-display: swap;
 }
 
 @font-face {
@@ -60,6 +65,7 @@
       format("woff2");
   unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
     U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+    font-display: swap;
 }
 
 @font-face {
@@ -72,6 +78,7 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
     U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
     U+FEFF, U+FFFD;
+    font-display: swap;
 }
 
 @font-face {
@@ -93,6 +100,7 @@
     url(https://fonts.gstatic.com/s/roboto/v18/KFOlCnqEu92Fr1MmWUlfABc4EsA.woff2)
       format("woff2");
   unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+  font-display: swap;
 }
 
 @font-face {
@@ -103,6 +111,7 @@
     url(https://fonts.gstatic.com/s/roboto/v18/KFOlCnqEu92Fr1MmWUlfCBc4EsA.woff2)
       format("woff2");
   unicode-range: U+1F00-1FFF;
+  font-display: swap;
 }
 
 @font-face {
@@ -113,6 +122,7 @@
     url(https://fonts.gstatic.com/s/roboto/v18/KFOlCnqEu92Fr1MmWUlfBxc4EsA.woff2)
       format("woff2");
   unicode-range: U+0370-03FF;
+  font-display: swap;
 }
 
 @font-face {
@@ -123,6 +133,7 @@
     url(https://fonts.gstatic.com/s/roboto/v18/KFOlCnqEu92Fr1MmWUlfCxc4EsA.woff2)
       format("woff2");
   unicode-range: U+0102-0103, U+0110-0111, U+1EA0-1EF9, U+20AB;
+  font-display: swap;
 }
 
 @font-face {
@@ -134,6 +145,7 @@
       format("woff2");
   unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
     U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+  font-display: swap;
 }
 
 @font-face {
@@ -146,6 +158,7 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
     U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
     U+FEFF, U+FFFD;
+  font-display: swap;
 }
 
 /* cyrillic-ext */
@@ -158,6 +171,7 @@
       format("woff2");
   unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F,
     U+FE2E-FE2F;
+  font-display: swap;
 }
 
 /* cyrillic */
@@ -169,6 +183,7 @@
     url(https://fonts.gstatic.com/s/roboto/v18/KFOlCnqEu92Fr1MmSU5fABc4EsA.woff2)
       format("woff2");
   unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+  font-display: swap;
 }
 
 /* greek-ext */
@@ -180,6 +195,7 @@
     url(https://fonts.gstatic.com/s/roboto/v18/KFOlCnqEu92Fr1MmSU5fCBc4EsA.woff2)
       format("woff2");
   unicode-range: U+1F00-1FFF;
+  font-display: swap;
 }
 
 /* greek */
@@ -191,6 +207,7 @@
     url(https://fonts.gstatic.com/s/roboto/v18/KFOlCnqEu92Fr1MmSU5fBxc4EsA.woff2)
       format("woff2");
   unicode-range: U+0370-03FF;
+  font-display: swap;
 }
 
 /* vietnamese */
@@ -202,6 +219,7 @@
     url(https://fonts.gstatic.com/s/roboto/v18/KFOlCnqEu92Fr1MmSU5fCxc4EsA.woff2)
       format("woff2");
   unicode-range: U+0102-0103, U+0110-0111, U+1EA0-1EF9, U+20AB;
+  font-display: swap;
 }
 
 /* latin-ext */
@@ -214,6 +232,7 @@
       format("woff2");
   unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
     U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+  font-display: swap;
 }
 
 /* latin */
@@ -227,6 +246,7 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
     U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
     U+FEFF, U+FFFD;
+  font-display: swap;
 }
 
 /* cyrillic-ext */
